--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@
   grid-template-rows: 10% 5% 75% 10%;
   gap: 16px 16px;
   grid-template-areas: ". . ." ". . ." ". . ." ". . ." ". . .";
-  background-image: linear-gradient(white, #8cc3e6);
+  background-image: linear-gradient(#b2d5eb, #6eb9e8);
 }
 
 .layout .calendar{
@@ -41,9 +41,9 @@
   max-height: 100%;
   padding: 2%;
   overflow: hidden;
-  border: 2px solid rgb(79, 92, 99);
-  border-bottom: 12px solid rgba(79, 92, 99, 0.4);
-  border-right: 14px solid rgba(159, 159, 159, 0.4);
+  border: 2px solid rgb(152, 164, 171);
+  border-bottom: 8px solid rgba(79, 92, 99, 0.4);
+  border-right: 10px solid rgba(159, 159, 159, 0.4);
   border-radius: 5px;
 }
 
@@ -53,15 +53,18 @@
   grid-row-start: 1;
   grid-row-end: 2;
   max-height: 100%;
-  justify-items: right;
+  align-self: right;
 }
 
 .layout .calendar-buttons{
-  grid-column-start: 2;
-  grid-column-end: 3;
-  grid-row-start: 2;
-  grid-row-end: 3;
-  max-height: 100%;
-  font-size: 16px;
-  max-width: 15%;
+  grid-column-start: 3;
+  grid-column-end: 4;
+  grid-row-start: 3;
+  grid-row-end: 4;
+  background-color: orange;
+  align-self: start;
+}
+
+.layout .calendar-buttons:hover{
+  background-color: lightskyblue;
 }
