--- a/src/App.css
+++ b/src/App.css
@@ -52,8 +52,9 @@
   grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 2;
-  max-height: 100%;
-  align-self: right;
+  align-self: center;
+  margin-top: 20px;
+  margin-right: 50px;
 }
 
 .layout .calendar-buttons{
